--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 pandas
+--extra-index-url https://download.pytorch.org/whl/cu113
+torch
+--extra-index-url https://download.pytorch.org/whl/cu113
+torchvision
+--extra-index-url https://download.pytorch.org/whl/cu113
+torchaudio
+rdkit-pypi
+dgllife
+pytorch-lightning
+-f https://data.dgl.ai/wheels/repo.html
+dgl-cu113
+-f https://data.dgl.ai/wheels/repo.html
+dglgo
