testing with model dset

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,13 @@ pytorch-lightning
 dgl-cu113
 -f https://data.dgl.ai/wheels/repo.html
 dglgo
+-f https://data.pyg.org/whl/torch-1.11.0+cpu.html
+torch-scatter
+-f https://data.pyg.org/whl/torch-1.11.0+cpu.html
+torch-sparse
+-f https://data.pyg.org/whl/torch-1.11.0+cpu.html
+torch-cluster
+-f https://data.pyg.org/whl/torch-1.11.0+cpu.html
+torch-spline-conv
+-f https://data.pyg.org/whl/torch-1.11.0+cpu.html
+torch-geometric
